# service_portal

./: .gitignore  AGENTS.md  INDEX.md  package-lock.json  package.json  project.md  runTasks.ts
.tasks/: 00-overview.md  01-milestone-m0-walking-skeleton.md  02-milestone-m1-status-mvp.md  03-milestone-m1b-powerbi-fabric-spike.md  04-milestone-m2-ticketing-mvp.md  05-milestone-m3-docs-glossary.md  06-milestone-m4-roadmap-rbac-hardening.md
backend/: .env.example  __init__.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: catalog.py  health.py  me.py  platforms.py  status_checks.py  status_results.py
backend/app/auth/: deps.py  identity.py  middleware.py  permissions.py
backend/app/core/: config.py  error_handlers.py  exceptions.py  logging.py
backend/app/db/: __init__.py  connection.py  databricks.py  deps.py  fixtures.py  interfaces.py  mock_data.py  models.py  query.py
backend/app/db/schemas/: platforms.sql  role_bindings.sql  status_checks.sql  status_ingestion_runs.sql  status_messages.sql  status_results.sql
backend/app/models/: platform.py  status_check.py
backend/app/services/: platform_service.py  rbac_service.py  status_check_service.py
backend/tests/: conftest.py  test_config.py  test_db_query_runner.py  test_error_handlers.py  test_fixtures.py  test_health.py  test_identity.py  test_me.py  test_platform_endpoints.py  test_rbac_permissions.py  test_status_checks_endpoints.py  test_status_endpoints.py
docs/: local-dev.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
infra/: app.yaml
(+28 files in other folders)
